--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -232,7 +232,7 @@
               <button mat-stroked-button>Reset Password</button>
             </div> -->
 
-          <div *ngIf="!isDetail" class="confirm btn-confirm py-24" fxLayout="row" fxLayoutGap="25px">
+          <div *ngIf="!isDetail && !disableSubmit" class="confirm btn-confirm py-24" fxLayout="row" fxLayoutGap="25px">
             <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
               SIMPAN
             </button>
