fixing b2b cn reward 09072020

--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -148,6 +148,9 @@
             </form>
           </div>
         </mat-tab>
+        <mat-tab label="Panel Mitra">
+          <app-panel-mitra-voucher></app-panel-mitra-voucher>
+        </mat-tab>
         <mat-tab label="Panel Retailer">
           <div class="ayo-middle p-24" fxLayout="column">
             <div>
