feature: - CDE-2356-earning-opportunity-photo-video-submission-integration-to-microsite - add new option Link to Web Browser (consumer only) - add new radio transfer_token (autologin target website)

--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -374,7 +374,7 @@
             <div class="" fxLayout="row" fxLayoutAlign="start center">
               <strong class="font-size-16">Transfer Token Credential</strong>
             </div>
-            <mat-radio-group formControlName="transfer_token_credential" class="radio-group">
+            <mat-radio-group formControlName="transfer_token" class="radio-group">
               <mat-radio-button class="radio-button" value="yes">Ya</mat-radio-button>
               <mat-radio-button class="radio-button" value="no">Tidak</mat-radio-button>
             </mat-radio-group>
