--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -370,7 +370,7 @@
               <mat-radio-button class="radio-button" value="no">Tidak</mat-radio-button>
             </mat-radio-group>
           </div>
-          <div class="pb-16 px-24" *ngIf="formBannerGroup.get('content_type').value === 'link_web'">
+          <div class="pb-16 px-24" *ngIf="formBannerGroup.get('content_type').value === 'link_web' || formBannerGroup.get('content_type').value === 'iframe'">
             <div class="" fxLayout="row" fxLayoutAlign="start center">
               <strong class="font-size-16">Transfer Token Credential</strong>
             </div>
