--- a/src/app/pages/b2-bvoucher/panel-mitra-voucher/panel-mitra-voucher.component.html
+++ b/src/app/pages/b2-bvoucher/panel-mitra-voucher/panel-mitra-voucher.component.html
@@ -1,17 +1,17 @@
 <div class="ayo-middle p-24" fxLayout="column">
   <div>
-    <!-- <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
-        <div class="button-row">
-          <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()">
-            <mat-icon>vertical_align_bottom</mat-icon> Import XLS
-          </button>
-        </div>
-        <div class="button-row">
-          <button mat-flat-button style="width: 160px" color="white" (click)="exportMitra()">
-            <mat-icon>vertical_align_top</mat-icon> Export XLS
-          </button>
-        </div>
-      </div> -->
+    <div class='import-export-bar p-16' fxLayoutGap="20px" fxLayout="row wrap" fxLayoutAlign="end center">
+      <div class="button-row">
+        <button mat-flat-button style="width: 160px" color="white" (click)="importMitra()">
+          <mat-icon>vertical_align_bottom</mat-icon> Import XLS
+        </button>
+      </div>
+      <div class="button-row">
+        <button mat-flat-button style="width: 160px" color="white" (click)="exportMitra()">
+          <mat-icon>vertical_align_top</mat-icon> Export XLS
+        </button>
+      </div>
+    </div>
 
     <form [formGroup]="formFilter" autoComplete="off">
       <div class="pl-16 pr-16 mt-8 bb" fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="20px">
