--- a/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
+++ b/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
@@ -1,40 +1,94 @@
 <div class="ayo-middle p-24" fxLayout="column">
   <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
     <h2 class="pl-8">Penukaran Voucher</h2>
-    <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
-      <mat-icon>search</mat-icon>
-      <mat-form-field class="is-light tab-search">
-        <input matInput placeholder="Cari" autocomplete="off">
-      </mat-form-field>
-    </div>
   </div>
-  <h4 style="text-align: center;">Page Under Construction!</h4>
-  <!-- <ngx-datatable #table class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
+  <!-- <h4 style="text-align: center;">Page Under Construction!</h4> -->
+  <div fxLayout="column">
+    <form [formGroup]="formFilter" autoComplete="off">
+      <div class="pl-16 pr-16 mt-8 bb" fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="20px">
+        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+          <mat-select placeholder="National" formControlName="national">
+            <mat-option [value]="item.id" *ngFor="let item of listLevelArea">{{item.name}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+          <mat-select placeholder="Zone" formControlName="zone" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['zone'])">{{item.name === 'all' ? 'Semua
+              Zona' :
+              item.code}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+          <mat-select placeholder="Regional" formControlName="region" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['region'])">{{item.name === 'all' ? 'Semua
+              Regional' :
+              item.code}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+          <mat-select placeholder="Area" formControlName="area" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['area'])">{{item.name === 'all' ? 'Semua
+              Area' :
+              item.code}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+          <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['salespoint'])">{{item.name === 'all' ? 'Semua
+              Salespoint' :
+              item.code}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+          <mat-select placeholder="District" formControlName="district" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['district'])">{{item.name === 'all' ? 'Semua
+              District' :
+              item.code}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field fxLayout="row" fxLayoutAlign="center center">
+          <mat-select placeholder="Territory" formControlName="territory" multiple>
+            <mat-option [value]="item.id" *ngFor="let item of filteringGeotree(list['territory'])">{{item.name === 'all' ? 'Semua
+              Territory' :
+              item.code}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
+          <mat-icon>search</mat-icon>
+          <mat-form-field class="is-light tab-search">
+            <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+          </mat-form-field>
+        </div>
+      </div>
+    </form>
+  </div>
+  <ngx-datatable #table class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
     [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
     [count]="pagination.total" [limit]="pagination.per_page" [offset]="offsetPagination" [externalPaging]="true"
     [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
 
-    <ngx-datatable-column name="Nama Voucher" prop="name">
+    <ngx-datatable-column name="Nama Toko" prop="name">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
         <a class="direct-edit" (click)="directDetail(row)">{{row.name}} </a>
       </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column name="Jumlah Panel Retailer" prop="panel_retailer_count">
+    <ngx-datatable-column name="Kode Agen" prop="code">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-        {{row.panel_retailer_count}}
+        {{row.code}}
       </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column name="Jumlah Panel WS" prop="panel_wholesaler_count">
+    <ngx-datatable-column name="Nama Pemilik" prop="owner">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-        {{row.panel_wholesaler_count}}
+        {{row.owner}}
       </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column name="Toko Menukarkan Koin" prop="retailer_redeem_coin_count">
+    <ngx-datatable-column name="Klasifikasi" prop="classification">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-        {{row.retailer_redeem_coin_count}}
+        {{row.classification}}
       </ng-template>
     </ngx-datatable-column>
 
@@ -44,14 +98,8 @@
       </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column name="Tanggal Awal" prop="start_date">
-      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.start_date | date: 'dd/MM/yyyy
-        HH:mm:ss'}}</ng-template>
-    </ngx-datatable-column>
-
-    <ngx-datatable-column name="Tanggal Akhir" prop="end_date">
-      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.end_date | date: 'dd/MM/yyyy
-        HH:mm:ss'}}</ng-template>
+    <ngx-datatable-column name="Nama WS" prop="wholesaler_name">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.wholesaler_name }}</ng-template>
     </ngx-datatable-column>
 
     <ngx-datatable-column name="Nilai Voucher" prop="nominal">
@@ -60,5 +108,14 @@
       </ng-template>
     </ngx-datatable-column>
 
-  </ngx-datatable> -->
+    <ngx-datatable-column name="Tanggal Penukaran" prop="available_at">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.available_at | date: 'dd/MM/yyyy
+        HH:mm:ss'}}</ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column name="Invoice Penukaran" prop="available_at">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.invoice}}</ng-template>
+    </ngx-datatable-column>
+
+  </ngx-datatable>
 </div>
